--- a/MVC_MultitecUA/Views/Evento/Index.cshtml
+++ b/MVC_MultitecUA/Views/Evento/Index.cshtml
@@ -1,82 +1,121 @@
 ﻿@model IEnumerable<MultitecUAGenNHibernate.EN.MultitecUA.EventoEN>
 
 @{
-    ViewBag.Title = "Eventos";
+	ViewBag.Title = "Eventos";
 }
 
 <h2>Eventos</h2>
 
-
-
-
-
-@Html.ActionLink("Filtrar", "PorFiltro")
-
 <p>
-    @Html.ActionLink("Crear nuevo evento", "Create")
+	@Html.ActionLink("Nuevo Evento", "Create")
+</p>
+<p>
+    @Html.ActionLink("Filtrar", "PorFiltro")
 </p>
 <table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Nombre)
-        </th>
-        <th>
-            Descripción
-            <!--Html.DisplayNameFor(model => model.Descripcion) -->
-        </th>
-        <th>
-            Inicio
-            <!--Html.DisplayNameFor(model => model.FechaInicio)-->
-        </th>
-        <th>
-            Fin
-            <!-- @Html.DisplayNameFor(model => model.FechaFin) -->
-        </th>
-        <th>
-            Inicio de inscripción
-            <!-- Html.DisplayNameFor(model => model.FechaInicioInscripcion) -->
-        </th>
-        <th>
-            Tope de inscripción
-            <!--Html.DisplayNameFor(model => model.FechaTopeInscripcion)-->
-        </th>
-        <th>
-            Proyectos asociados
-        </th>
-        <th></th>
-    </tr>
+	<tr>
+		<th>
+			@Html.DisplayNameFor(model => model.Nombre)
+		</th>
+		<th>
+			Descripción
+			<!--Html.DisplayNameFor(model => model.Descripcion) -->
+		</th>
+		<th>
+			Inicio
+			<!--Html.DisplayNameFor(model => model.FechaInicio)-->
+		</th>
+		<th>
+			Fin
+			<!-- @Html.DisplayNameFor(model => model.FechaFin) -->
+		</th>
+		<th>
+			Inicio de inscripción
+			<!-- Html.DisplayNameFor(model => model.FechaInicioInscripcion) -->
+		</th>
+		<th>
+			Tope de inscripción
+			<!--Html.DisplayNameFor(model => model.FechaTopeInscripcion)-->
+		</th>
+		<th>
+			Proyectos asociados
+		</th>
+		<th></th>
+	</tr>
 
-    @foreach (var item in Model)
-    {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Nombre)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Descripcion)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FechaInicio)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FechaFin)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FechaInicioInscripcion)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FechaTopeInscripcion)
-            </td>
-            <td>
-                @Html.ActionLink("Proyectos", "ProyectosPorEvento", new { id = item.Id })
-            </td>
+	@foreach (var item in Model)
+	{
+		<tr>
+			<td>
+				@Html.DisplayFor(modelItem => item.Nombre)
+			</td>
+			<td>
+				@Html.DisplayFor(modelItem => item.Descripcion)
+			</td>
+			<td>
+				@Html.DisplayFor(modelItem => item.FechaInicio)
+			</td>
+			<td>
+				@Html.DisplayFor(modelItem => item.FechaFin)
+			</td>
+			<td>
+				@Html.DisplayFor(modelItem => item.FechaInicioInscripcion)
+			</td>
+			<td>
+				@Html.DisplayFor(modelItem => item.FechaTopeInscripcion)
+			</td>
+			<td>
+				@Html.ActionLink("Proyectos", "ProyectosPorEvento", new { id = item.Id })
+			</td>
 
-            <td style="text-align: center;">
-                @Html.ActionLink("Editar", "Edit", new { id = item.Id }) |
-                @Html.ActionLink("Detalles", "Details", new { id = item.Id }) |
-                @Html.ActionLink("Borrar", "Delete", new { id = item.Id })
-            </td>
-        </tr>
-    }
+			<td style="text-align: center;">
+				@Html.ActionLink("Editar", "Edit", new { id = item.Id }) |
+				@Html.ActionLink("Detalles", "Details", new { id = item.Id }) |
+				@Html.ActionLink("Borrar", "Delete", new { id = item.Id })
+			</td>
+		</tr>
+	}
 
 </table>
+
+@{
+	/* La página que me llega del controlador es una unidad menos de lo que muestro por pantalla (la 0 es la 1) */
+	var siguiente = (int)ViewData["pag"] + 1;
+	var anterior = siguiente - 2;
+	var numPags = (int)ViewData["numeroPaginas"] + 1;
+}
+<p class="text-center">
+	@{
+		if (siguiente > 1)
+		{
+			<label>@Html.ActionLink("Primera", "Index", new { pag = 0 })</label>
+			<span>|</span>
+			<label>@Html.ActionLink("Anterior", "Index", new { pag = anterior })</label>
+		}
+		else
+		{
+			<span>Primera</span>
+			<span>|</span>
+			<span>Anterior</span>
+		}
+	}
+
+	<span>|</span>
+	<label>Página @siguiente de @numPags</label>
+	<span>|</span>
+
+	@{
+		if (siguiente < numPags)
+		{
+			<label>@Html.ActionLink("Siguiente", "Index", new { pag = siguiente })</label>
+			<span>|</span>
+			<label>@Html.ActionLink("Última", "Index", new { pag = numPags - 1 })</label>
+		}
+		else
+		{
+			<span>Siguiente</span>
+			<span>|</span>
+			<span>Última</span>
+		}
+	}
+</p>
