--- a/MVC_MultitecUA/Views/Usuario/ChangeRol.cshtml
+++ b/MVC_MultitecUA/Views/Usuario/ChangeRol.cshtml
@@ -18,19 +18,11 @@
 
         <div class="form-group">
             @Html.LabelFor(model => model.Rol, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Rol, new { htmlAttributes = new { @class = "form-control" } })
+            <div class="col-md-10">                
+                @Html.DropDownListFor(model => model.Rol, new SelectList((System.Collections.IEnumerable)ViewData["listaRoles"]), new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Rol, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
-        <div>
-            <ol>
-                <li>Miembro</li>
-                <li>Administrador</li>
-                <li>Miembro de Honor</li>
-                <li>Antiguo Miembro</li>
-            </ol>
+            </div>
         </div>
 
         <div class="form-group">
