--- a/MVC_MultitecUA/Views/Usuario/ForNick.cshtml
+++ b/MVC_MultitecUA/Views/Usuario/ForNick.cshtml
@@ -1,14 +1,55 @@
 ﻿@model IEnumerable<MultitecUAGenNHibernate.EN.MultitecUA.UsuarioEN>
 
 @{
-    ViewBag.Title = "ForNick";
+    ViewBag.Title = "Usuarios filtrados por Nick";
 }
 
-<h2>ForNick</h2>
+<h2>Usuarios filtrados por Nick</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    <h3>Filtros:</h3>
+    @using (Html.BeginForm("ForNick", "Usuario"))
+    {
+        <div class="form-horizontal">
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            <div class="form-group">
+                <div class="col-md-10">
+                    <label for="nick">Nick: </label><input class="form-control" type="text" name="nick" />
+                    <input type="submit" value="Filtrar por Nick" class="btn btn-default" />
+                </div>
+            </div>
+        </div>
+    }
+
+    @using (Html.BeginForm("ForRol", "Usuario"))
+    {
+        <div class="form-horizontal">
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            <div class="form-group">
+                <div class="col-md-10">
+                    <label for="rol">Rol: </label>
+                    @Html.DropDownList("rol", new SelectList((System.Collections.IEnumerable)ViewData["listaRoles"]), new { @class = "form-control" })
+                    <input type="submit" value="Filtrar por Rol" class="btn btn-default" />
+                </div>
+            </div>
+        </div>
+    }
+
+    @using (Html.BeginForm("ForCategoria", "Usuario"))
+    {
+        <div class="form-horizontal">
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            <div class="form-group">
+                <div class="col-md-10">
+                    <label for="categoria">Categoría: </label>
+                    @Html.DropDownList("categoria", new SelectList((System.Collections.IEnumerable)ViewData["listaCategoriasUsuarios"]), new { @class = "form-control" })
+                    <input type="submit" value="Filtrar por Categoría" class="btn btn-default" />
+                </div>
+            </div>
+        </div>
+    }
 </p>
+<p>@Html.ActionLink("Nuevo Usuario", "Create")</p>
 <table class="table">
     <tr>
         <th>
@@ -16,12 +57,6 @@
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Nombre)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Password)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Foto)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Email)
@@ -32,38 +67,43 @@
         <th>
             @Html.DisplayNameFor(model => model.Nick)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Rol)
+        </th>
+        <th>
+            Acciones
+        </th>
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Id)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Nombre)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Password)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Foto)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Email)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.FechaAlta)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Nick)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-            @Html.ActionLink("Cambiar Rol", "ChangeRol", new { id = item.Id })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Id)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Nombre)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Email)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.FechaAlta)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Nick)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Rol)
+            </td>
+            <td>
+                @Html.ActionLink("Editar", "Edit", new { id = item.Id }) |
+                @Html.ActionLink("Detalles", "Details", new { id = item.Id }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.Id }) |
+                @Html.ActionLink("Cambiar Rol", "ChangeRol", new { id = item.Id })
+            </td>
+        </tr>
+    }
 
 </table>
