--- a/MVC_MultitecUA/Views/Mensaje/Create.cshtml
+++ b/MVC_MultitecUA/Views/Mensaje/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model MultitecUAGenNHibernate.EN.MultitecUA.MensajeEN
+﻿@model MVC_MultitecUA.Models.MensajeModel
 
 @{
     ViewBag.Title = "Crear";
@@ -12,42 +12,42 @@
 
 @using (Html.BeginForm()) 
 {
-    @Html.AntiForgeryToken()
-    
-<div class="form-horizontal">
-    <hr />
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(model => model.Titulo, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Titulo, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Titulo, "", new { @class = "text-danger" })
-        </div>
-    </div>
+	@Html.AntiForgeryToken()
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.Cuerpo, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Cuerpo, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Cuerpo, "", new { @class = "text-danger" })
-        </div>
-    </div>
+	<div class="form-horizontal">
+		<hr />
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.UsuarioAutor.Id, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.UsuarioAutor.Id, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.UsuarioAutor.Id, "", new { @class = "text-danger" })
-        </div>
-    </div>
+		<div class="form-group">
+			@Html.LabelFor(model => model.Titulo, htmlAttributes: new { @class = "control-label col-md-2" })
+			<div class="col-md-10">
+				@Html.EditorFor(model => model.Titulo, new { htmlAttributes = new { @class = "form-control" } })
+				@Html.ValidationMessageFor(model => model.Titulo, "", new { @class = "text-danger" })
+			</div>
+		</div>
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.UsuarioReceptor.Id, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.UsuarioReceptor.Id, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.UsuarioReceptor.Id, "", new { @class = "text-danger" })
-        </div>
-    </div>
+		<div class="form-group">
+			@Html.LabelFor(model => model.Cuerpo, htmlAttributes: new { @class = "control-label col-md-2" })
+			<div class="col-md-10">
+				@Html.EditorFor(model => model.Cuerpo, new { htmlAttributes = new { @class = "form-control" } })
+				@Html.ValidationMessageFor(model => model.Cuerpo, "", new { @class = "text-danger" })
+			</div>
+		</div>
+
+		@Html.ValidationSummary(true, "", new { @class = "text-danger" })
+		<div class="form-group">
+			@Html.LabelFor(model => model.NickAutor, htmlAttributes: new { @class = "control-label col-md-2" })
+			<div class="col-md-10">
+				@Html.DropDownList("NickAutor", new SelectList((System.Collections.IEnumerable)ViewData["listaNicks"]), new { @class = "form-control" })
+			</div>
+		</div>
+
+		<div class="form-group">
+			@Html.LabelFor(model => model.NickReceptor, htmlAttributes: new { @class = "control-label col-md-2" })
+			<div class="col-md-10">
+				@Html.DropDownList("NickReceptor", new SelectList((System.Collections.IEnumerable)ViewData["listaNicks"]), new { @class = "form-control" })
+			</div>
+		</div>
+
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
