--- a/MVC_MultitecUA/Views/Mensaje/Edit.cshtml
+++ b/MVC_MultitecUA/Views/Mensaje/Edit.cshtml
@@ -1,17 +1,19 @@
 ﻿@model MVC_MultitecUA.Models.MensajeModel
 
 @{
-    ViewBag.Title = "Detalles";
+    ViewBag.Title = "Editar";
 }
 
-<h2>Detalles de Mensaje</h2>
+<h2>Editar</h2>
 
-<p class="text-center">
-    <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Mensajes", "Index")</label><span> >> </span><label>@ViewBag.Title</label>
-</p>
+
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
 
 <div>
-    <hr />
+	<h4>Editar</h4>
+	<hr />
 	<dl class="dl-horizontal">
 		<dt>
 			@Html.DisplayNameFor(model => model.AutorId)
@@ -77,25 +79,26 @@
 			@Html.DisplayFor(model => model.NickReceptor)
 		</dd>
 
-		<dt>
-			@Html.DisplayNameFor(model => model.BandejaAutor)
-		</dt>
-
-		<dd>
-			@Html.DisplayFor(model => model.BandejaAutor)
-		</dd>
-
-		<dt>
-			@Html.DisplayNameFor(model => model.BandejaReceptor)
-		</dt>
-
-		<dd>
-			@Html.DisplayFor(model => model.BandejaReceptor)
-		</dd>
-
 	</dl>
 </div>
-<p>
-    @Html.ActionLink("Editar", "Edit", new { id = Model.Id }) |
+<div class="form-group">
+	<div class="col-md-offset-2 col-md-10">
+
+		@Html.ActionLink("Leido", "CambioEstado", new { id = ViewData["idMensaje"], cambioEstado = "Leido" }, new { @class = "btn btn-default" })
+		@Html.ActionLink("No Leido", "CambioEstado", new { id = ViewData["idMensaje"], cambioEstado = "NoLeido" }, new { @class = "btn btn-default" })
+
+
+	</div>
+</div>
+
+
+
+}
+
+<div>
     @Html.ActionLink("Volver a la lista", "Index")
-</p>
+</div>
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
