--- a/MVC_MultitecUA/Views/Mensaje/Index.cshtml
+++ b/MVC_MultitecUA/Views/Mensaje/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<MultitecUAGenNHibernate.EN.MultitecUA.MensajeEN>
+﻿@model IEnumerable<MVC_MultitecUA.Models.MensajeModel>
 
 @{
 	ViewBag.Title = "Mensajes";
@@ -15,40 +15,74 @@
 <hr />
 	<tr>
 		<th>
-			@Html.DisplayNameFor(model => model.Id)
-		</th>
-		<th>
 			@Html.DisplayNameFor(model => model.Titulo)
 		</th>
 		<th>
 			@Html.DisplayNameFor(model => model.Cuerpo)
 		</th>
 		<th>
-			@Html.DisplayNameFor(model => model.Fecha)
+			@Html.DisplayNameFor(model => model.NombreAutor)
 		</th>
+		<th>
+			@Html.DisplayNameFor(model => model.NickAutor)
+		</th>
+		<th>
+			@Html.DisplayNameFor(model => model.BandejaAutor)
+		</th>
+		<th>
+			@Html.DisplayNameFor(model => model.NombreReceptor)
+		</th>
+		<th>
+			@Html.DisplayNameFor(model => model.NickReceptor)
+		</th>
+		<th>
+			@Html.DisplayNameFor(model => model.BandejaReceptor)
+		</th>
+		<th>
+			@Html.DisplayNameFor(model => model.EstadoLectura)
+		</th>
+
 		<th></th>
 	</tr>
 
 	@foreach (var item in Model)
 	{
-		<tr>
-			<td>
-				@Html.DisplayFor(modelItem => item.Id)
-			</td>
-			<td>
-				@Html.DisplayFor(modelItem => item.Titulo)
-			</td>
-			<td>
-				@Html.DisplayFor(modelItem => item.Cuerpo)
-			</td>
-			<td>
-				@Html.DisplayFor(modelItem => item.Fecha)
-			</td>
-			<td>
-				@Html.ActionLink("Detalles", "Details", new { id = item.Id }) |
-				@Html.ActionLink("Borrar", "Delete", new { id = item.Id })
-			</td>
-		</tr>
+	<tr>
+		<td>
+			@Html.DisplayFor(modelItem => item.Titulo)
+		</td>
+		<td>
+			@Html.DisplayFor(modelItem => item.Cuerpo)
+		</td>
+		<td>
+			@Html.DisplayFor(modelItem => item.NombreAutor)
+		</td>
+		<td>
+			@Html.DisplayFor(modelItem => item.NickAutor)
+		</td>
+		<td>
+			@Html.DisplayFor(modelItem => item.BandejaAutor)
+		</td>
+		<td>
+			@Html.DisplayFor(modelItem => item.NombreReceptor)
+		</td>
+		<td>
+			@Html.DisplayFor(modelItem => item.NickReceptor)
+		</td>
+		<td>
+			@Html.DisplayFor(modelItem => item.BandejaReceptor)
+		</td>
+		<td>
+			@Html.DisplayFor(modelItem => item.EstadoLectura)
+		</td>
+		<td>
+			@Html.ActionLink("Editar", "Edit", new { id = item.Id }) |
+			@Html.ActionLink("Cambiar bandeja de autor", "EditAutor", new { id = item.Id }) |
+			@Html.ActionLink("Cambiar bandeja de receptor", "EditReceptor", new { id = item.Id }) |
+			@Html.ActionLink("Detalles", "Details", new { id = item.Id }) |
+			@Html.ActionLink("Borrar", "Delete", new { id = item.Id })
+		</td>
+	</tr>
 	}
 
 </table>
